--- a/web-demo/自定义selebox2.html
+++ b/web-demo/自定义selebox2.html
@@ -160,7 +160,7 @@
 
 
             //显示框class为select_showbox,插入到创建的tag_select中
-            var select_showbox = $('<div></div>');//显示框
+            var select_showbox = $('<div class="multiseriate"></div>');//显示框
             select_showbox.css('cursor', 'pointer').attr('class', 'select_showbox').appendTo(tag_select);
 
 
