自定义select提交表单获取值
初步完成

--- a/web-demo/自定义selebox.html
+++ b/web-demo/自定义selebox.html
@@ -74,7 +74,7 @@
 </style>
 
 
-<form action="" method="post" id="formid" name="form1">
+<form action="localhost:8080/testurl" method="get" id="formid" name="form1">
     <div>
         <!--<div class="select_box">-->
             <!--<div class="select_showbox" style="cursor: pointer;">01</div>-->
@@ -111,6 +111,10 @@
             <option value="11">11</option>
             <option value="12">12</option>
         </select><br>
+        <br>
+        <br>
+        <br>
+        <input type="submit">
     </div>
 </form>
 <script type="text/javascript" src="http://cdn.gbtags.com/jquery/1.8.2/jquery.min.js"></script>
@@ -200,6 +204,8 @@
 </script>
 
 
-<script type="text/javascript"></script>
+<script type="text/javascript">
+    $('#choose').val('02');
+</script>
 </body>
 </html>
