--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -8,6 +8,14 @@
 	<h1>下面是文件导航，主要在演示中查看写的静态网页</h1>
      <div style="padding:20px;margin-top:30px">
      	<a href="./imgfloat.html">海报随意飘动demo</a><br><br>
+     <p>ie8-圆角问题探究解决</p>
+	<a href="./ie8-border-radius/radius-css3.pie.html">css3.pie-demo地址</a>
+	<br>
+	<br>
+	<a href="./ie8-border-radius/radius-jquery-corner.html">jquery.corner.js-demo地址(效果不好)</a>
+	<br>
+	<br>
+	<a href="./ie8-border-radius/new-api-jquery.corner/radius-jquery-corner.html">jquery.corner.js-新api-demo地址</a>
      </div>
 </body>
 </html>
