perfect-scrollbar-兼容ie8demo

--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -16,6 +16,12 @@
 	<br>
 	<br>
 	<a href="./ie8-border-radius/new-api-jquery.corner/radius-jquery-corner.html">jquery.corner.js-新api-demo地址</a>
+	<br>
+	<br>
+	<a href="./perfect-scrollbar/perfect-scrollbar.html"><img src="./img/perfect-scrollbar-img.png" alt="自定义滚动条截图" />perfect-scrollbar插件说明</a>
+	<a href="#"></a>
+	<br>
+	<a href="./perfect-scrollbar/demo/perfect-scrollbar-example.html">perfect-scrollbar-demo</a>
      </div>
 </body>
 </html>
