增加表单拦截事件demo

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 	<br>
 	<br>
 	<a href="./web-demo/ie8-border-radius/radius-jquery-corner.html">jquery.corner.js-demo地址(效果不好)</a>
+	<br>
+	<br>
+	<a href="./web-demo/sumitbefore/submitbefore.html">表单提交拦截事件</a>
 </body>
 </html>
