--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 	<br>
 	<br>
 	<a href="./web-demo/sumitbefore/submitbefore.html">表单提交拦截事件</a>
+	<br>
+	<br>
+	<a href="./web-demo/iframe_height_resize/main.html">iframe高度自动计算</a>
 </body>
 </html>
