伪元素demo上交

--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -22,6 +22,11 @@
 	<a href="#"></a>
 	<br>
 	<a href="./perfect-scrollbar/demo/perfect-scrollbar-example.html">perfect-scrollbar-demo</a>
+	<br>
+	<br>
+	<br>
+	<a href="css-before-and-after.html">伪元素做两边蓝边效果</a>
+	<br>
      </div>
 </body>
 </html>
