jQuery新闻滚动播报插件BreakingNews demo提交

--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -27,6 +27,8 @@
 	<br>
 	<a href="css-before-and-after.html">伪元素做两边蓝边效果</a>
 	<br>
+	<br>
+	<a href="BreakingNews/3.htm">jQuery新闻滚动播报插件BreakingNews</a>
      </div>
 </body>
 </html>
